--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,37 +1,65 @@
-* {
-  font-family: "Ubuntu", sans-serif;
-}
-
 .login-container {
   display: flex;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to right bottom, #a8c0ff, #485fc7);
+  /* background: linear-gradient(to right bottom, #485fc7, royalblue, #485fc7); */
+
+  /* background: linear-gradient(
+        -45deg,
+        rgba(58, 70, 83, 1) 20%,
+        rgba(0, 0, 0, 0.5) 21%,
+        rgba(0, 0, 0, 0.3) 22%,
+        rgba(255, 255, 255, 0) 30%,
+        rgba(255, 255, 255, 0) 70%,
+        rgba(0, 0, 0, 0.3) 78%,
+        rgba(0, 0, 0, 0.5) 79%,
+        rgba(58, 70, 83, 1) 80%
+      )
+      0px 0px / 100px 100px repeat repeat,
+    -45deg fiber
+      linear-gradient(
+        45deg,
+        rgba(255, 255, 255, 0) 20%,
+        rgba(0, 0, 0, 0.3) 28%,
+        rgba(0, 0, 0, 0.6) 29%,
+        rgba(69, 90, 109, 1) 30%,
+        rgba(69, 90, 109, 1) 70%,
+        rgba(0, 0, 0, 0.6) 71%,
+        rgba(0, 0, 0, 0.3) 72%,
+        rgba(255, 255, 255, 0) 80%
+      )
+      0px 0px / 100px 100px repeat repeat,
+
+    45deg fiber
+      linear-gradient(
+        -45deg,
+        rgba(255, 255, 255, 0) 29%,
+        rgba(58, 70, 83, 1) 30%,
+        rgba(58, 70, 83, 1) 70%,
+        rgba(255, 255, 255, 0) 71%
+      )
+      0px 0px / 100px 100px repeat repeat,
+    -45deg fiber
+     linear-gradient(0deg, rgba(1, 9, 18, 1) 0%, rgba(1, 9, 18, 1) 100%) 0px
+      0px / 100px 100px repeat repeat; */
+
+  background-image: url("../../img/bg4.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .login-container .card {
-  width: 30%;
+  width: 35%;
   border: none;
   border-radius: 8px;
-  padding: 1rem 0.5rem;
-  border: 1px solid #1112;
+  border: 1px solid #fff8;
   transition-duration: 0.4s;
-  background-color: #fff2;
-  box-shadow: 1px 1px 16px #2221;
-}
-
-.login-container .card .card-title {
-  font-size: 1.7rem;
-  font-weight: bold;
-  color: #ffffff;
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-.login-container .card,
-.login-container .card-body {
-  padding-bottom: 0.5rem;
+  background-color: #fff5;
+  backdrop-filter: blur(10px);
+  box-shadow: 1px 1px 10px #222;
+  padding: 2rem 1.5rem 0.5rem 1.5rem;
 }
 
 .login-container .card form .login-button {
@@ -46,10 +74,6 @@
 
 .login-container .card form .mantine-button:hover {
   text-decoration: underline;
-}
-
-.login-container .card form .input-field label {
-  color: #fff;
 }
 
 .login-container .card .error p {
