--- a/src/components/CreatePost/CreatePost.css
+++ b/src/components/CreatePost/CreatePost.css
@@ -17,18 +17,16 @@
   background-color: transparent;
 }
 
-/* input type file */
-.createpost-container .container .card form label {
-  margin-top: 1rem;
-  font-weight: 500;
-  font-size: 0.9rem;
+.createpost-container .container .card form span#cover-image-label {
+  color: #222;
+  font-size: 14px !important;
+  font-weight: 400 !important;
 }
 
 .createpost-container .container .card form .img-preview {
   width: 100%;
-  height: 30vh;
-  border-radius: 5px;
-  margin-bottom: 1rem;
+  height: 35vh;
+  border-radius: 10px;
 }
 
 .createpost-container .container .card form .img-preview img {
@@ -41,6 +39,7 @@
   width: 100%;
   border: none;
   border-radius: 5px;
+  margin-bottom: 1rem;
 }
 
 .createpost-container .container .card form input[type="file"] {
@@ -51,22 +50,22 @@
   border: 1px solid #ddd;
 }
 
-.createpost-container .container .card form .postTitle {
+.createpost-container .container .card form #post-title {
   width: 100%;
+  height: 5rem;
   border: none;
   color: #222;
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 3rem;
   background-color: transparent;
 }
 
-.createpost-container .container .card form .postTitle:focus {
+.createpost-container .container .card form #post-title:focus {
   outline: none;
   box-shadow: none;
 }
 
-.createpost-container .container .card form .postTitle::placeholder {
+.createpost-container .container .card form #post-title::placeholder {
   color: #2224;
   font-size: 2rem;
   font-weight: bold;
@@ -82,8 +81,8 @@
 }
 
 .createpost-container .container .card .error {
-  color: #f44336;
   margin: 1rem 0;
+  color: #f44336;
   font-size: 0.8rem;
   text-align: center;
 }
@@ -95,5 +94,10 @@
 
   .createpost-container .container .card form .submit {
     width: 100%;
+  }
+}
+@media only screen and (max-width: 426px) {
+  .createpost-container .container .card form .ck-editor__editable {
+    min-height: 20vh;
   }
 }
