--- a/src/components/NewsCards/NewsCardSmall.css
+++ b/src/components/NewsCards/NewsCardSmall.css
@@ -3,10 +3,11 @@
 }
 
 .post-card {
-  flex: 1;
-  width: 40%;
-  min-width: 16rem;
-  /* max-width: 50%; */
+  width: 30%;
+  flex-grow: 1;
+  padding: 1rem;
+  max-width: 55%;
+  /* min-width: 16rem; */
   border-radius: 10px;
   border: 1px solid #2222;
   box-shadow: 1px 2px 9px #2224;
@@ -14,8 +15,8 @@
 
 .post-card .card-image {
   height: 12rem;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 10px;
+  border: 1px solid #2229;
 }
 
 .post-card .menu-container {
@@ -28,9 +29,7 @@
   position: absolute;
   place-items: center;
   justify-content: flex-end;
-  background-color: #ffffff;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  background-color: #800;
 }
 
 .post-card .menu-container .post-menu-items svg {
@@ -63,20 +62,14 @@
 
 @media only screen and (max-width: 1024px) {
   .post-card {
-    width: 70%;
-    cursor: pointer;
-    margin-bottom: 30px;
+    max-width: 50%;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .post-card {
-    margin: 0 0.5rem 1rem 0.5rem;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .post-card {
+    width: 100%;
+    max-width: 100%;
     margin: 0 0.5rem 1rem 0.5rem;
   }
 }
@@ -89,19 +82,22 @@
   }
 
   .post-card {
-    width: 100%;
-    border-radius: 6px;
+    margin: 0;
   }
 
   .post-card .card-image {
     height: 9rem;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
   }
-}
 
-@media only screen and (max-width: 320px) {
   .post-card h1 .post-title {
     font-size: 1rem;
+  }
+
+  .post-card div.datetime #date {
+    font-size: 0.7rem !important;
+  }
+
+  .post-card div.datetime #hashtag {
+    font-size: 0.7rem !important;
   }
 }
